--- a/Cap13/Projeto2-Perguntas.ipynb
+++ b/Cap13/Projeto2-Perguntas.ipynb
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2fec2977",
+   "id": "997be7d3",
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "97b6fb4b",
+   "id": "ca90245c",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fa8f03d9",
+   "id": "f68dd08c",
    "metadata": {},
    "outputs": [
     {
@@ -963,11 +963,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "47ec7085",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data_Pedido\n",
+       "01/01/2018    1481.8280\n",
+       "01/02/2015     468.9000\n",
+       "01/02/2017     161.9700\n",
+       "01/03/2015    2203.1510\n",
+       "01/03/2016    1642.1744\n",
+       "Name: Valor_Venda, dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pn2 = df_dsa.groupby('Data_Pedido')['Valor_Venda'].sum()\n",
+    "df_pn2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a505d5d3",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure()\n",
+    "df_pn2.plot(x = 'Data_Pedido', y = 'Valor_Venda')\n",
+    "plt.title('Total de Vendas Por Data do Pedido')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
