--- a/Cap13/Projeto2-Perguntas.ipynb
+++ b/Cap13/Projeto2-Perguntas.ipynb
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "acda6cf4",
    "metadata": {},
    "outputs": [
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "a0024ee0",
    "metadata": {},
    "outputs": [
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "47ec7085",
    "metadata": {},
    "outputs": [
@@ -979,7 +979,7 @@
        "Name: Valor_Venda, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "14b342a1",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "2187c6b6",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "af8fd6b8",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "042ef540",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1194,7 @@
        "123        Detroit   42446.9440"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "15fc5c74",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "id": "70c90a68",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1299,7 @@
        "2  Home Office  4.224914e+05"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "id": "b62bc81b",
    "metadata": {},
    "outputs": [
@@ -1350,11 +1350,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "14f10869",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_dsa['Data_Pedido'] = pd.to_datetime(df_dsa['Data_Pedido'], dayfirst = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "06e7f894",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dsa['Ano'] = df_dsa['Data_Pedido'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6a2e9a03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ano   Segmento   \n",
+       "2015  Consumer       256719.9166\n",
+       "      Corporate      125819.5957\n",
+       "      Home Office     88229.0878\n",
+       "2016  Consumer       265295.2593\n",
+       "      Corporate      114643.1229\n",
+       "      Home Office     74134.1332\n",
+       "2017  Consumer       288459.5572\n",
+       "      Corporate      203266.7398\n",
+       "      Home Office    103639.6270\n",
+       "2018  Consumer       323359.6019\n",
+       "      Corporate      235502.7284\n",
+       "      Home Office    156488.5849\n",
+       "Name: Valor_Venda, dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pn6 = df_dsa.groupby(['Ano', 'Segmento'])['Valor_Venda'].sum()\n",
+    "df_pn6"
+   ]
   },
   {
    "cell_type": "markdown",
